fix ui z-index

--- a/source/sass/home.scss
+++ b/source/sass/home.scss
@@ -56,7 +56,7 @@ body {
     background: var(--light);
     width: 230px;
     height: 100%;
-    z-index: 2000;
+    z-index: 1040;
     overflow-x: hidden;
     scrollbar-width: none;
     transition: all 0.3s ease;
